# ai_recruiter

./: .gitignore  _spec.txt  pyproject.toml  requirements.txt  streamlit_app.py  submission_metadata.yaml
.streamlit/: config.toml
src/: build_index.py  candidate_builder.py  final_ranked_candidates.csv  jd_parser.py  main.py  pipeline.py  search_index.py
src/combine/: candidate_builder.py  combine.py
src/common/: paths.py
src/intelligence/: behavior.py  candidate_scores.csv  candidate_scores.json  career_match.py  embedding.py  evidence.py  experience.py  honeypot.py  main.py  trajectory.py
src/jd_understanding/: __init__.py  langchain_parser.py  parser.py  policy.py  schemas.py  terms.py
src/models/: embedding_model.py
src/pipeline/: candidate_repository.py  pipeline.py  timmer.py
src/ranking/: __init__.py  cross_encoder.py  main.py  reasoning.py  rule_engine.py  schemas.py  scoring.py
src/retrieval/: bm25_retrieval.py  embedding_retrieval.py  hybrid_embed.py
submission/: candidate_scores.csv  candidate_scores.json
tests/: test_intelligence_scoring.py  test_jd_understanding.py  test_pipeline_integration.py  test_ranking_logic.py  test_rule_engine.py  test_runtime_resilience.py
