[project]
name = "ai-recruite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.14.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.5.1",
]
